--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb+srv://heroe:heroe@test.pa7hd.mongodb.net/clinicaReactiva?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://userxd:passxd@cluster0.3z6fa.mongodb.net/sofka_facturacion?retryWrites=true&w=majority
